--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -61,8 +61,8 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:fontFamily="sans-serif"
-                    android:drawableLeft="@drawable/ic_action_email"
-                    android:drawableStart="@drawable/ic_action_email"
+                    android:drawableLeft="@drawable/ic_person_black_24dp"
+                    android:drawableStart="@drawable/ic_person_black_24dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:textAlignment="center"
@@ -81,8 +81,8 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:fontFamily="sans-serif"
-                    android:drawableLeft="@drawable/ic_action_email"
-                    android:drawableStart="@drawable/ic_action_email"
+                    android:drawableLeft="@drawable/ic_local_phone_black_24dp"
+                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:textAlignment="center"
@@ -102,8 +102,8 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:fontFamily="sans-serif"
-                    android:drawableLeft="@drawable/ic_action_email"
-                    android:drawableStart="@drawable/ic_action_email"
+                    android:drawableLeft="@drawable/ic_email_black_24dp"
+                    android:drawableStart="@drawable/ic_email_black_24dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:textAlignment="center"
@@ -123,8 +123,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:drawableLeft="@drawable/ic_action_password"
-                    android:drawableStart="@drawable/ic_action_password"
+                    android:drawableLeft="@drawable/ic_lock_black_24dp"
+                    android:drawableStart="@drawable/ic_lock_black_24dp"
+                    android:drawableEnd="@drawable/ic_passwordvisibility_off"
                     android:textAlignment="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -144,8 +145,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:drawableLeft="@drawable/ic_action_password"
-                    android:drawableStart="@drawable/ic_action_password"
+                    android:drawableLeft="@drawable/ic_lock_black_24dp"
+                    android:drawableStart="@drawable/ic_lock_black_24dp"
+                    android:drawableEnd="@drawable/ic_passwordvisibility_off"
                     android:textAlignment="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -169,6 +171,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="8dp"
                     android:background="@drawable/rounded2"
+                    android:onClick="Next"
                     android:padding="5dp"
                     android:textColor="@color/white"
                     android:text="Register"/>
