--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -4,13 +4,12 @@
         <shape android:shape="rectangle">
             <solid
                 android:color="@android:color/transparent"/>
-            <stroke android:width="1dp" android:color="@color/colorAccent"/>
+            <stroke android:width="1dp" android:color="@color/grey"/>
             <corners
-                android:radius="60dp"
-                android:topLeftRadius="10dp"
-                android:topRightRadius="10dp"
-                android:bottomLeftRadius="10dp"
-                android:bottomRightRadius="10dp"
+                android:topLeftRadius="2dp"
+                android:topRightRadius="2dp"
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"
                 />
         </shape>
     </item>
