--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="black">#000</color>
     <color name="white">#fff</color>
     <color name="brown">#ae6d06</color>
-    <color name="grey">#f4eeee</color>
+    <color name="grey">#dfdddd</color>
 </resources>
 
 
